Java8 compatible now